--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ a {
     font-size: 15px;
   }
 
+  .play-button{
+    border-radius: 50%; 
+    background-color: #fff; 
+    width: 64px; 
+    height: 64px; 
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+  }
 .background-grey {
     background-color: #F5F5F5;
 }
